# bebone

./: .gitmodules
.github/workflows/: clang_build_win.yml  gcc_build_ubuntu.yml  mingw_gcc_build_win.yml
3dparty/: CMakeLists.txt
examples/gfx/opengl/: CMakeLists.txt
examples/gfx/opengl/5_opengl_flappy_bird/core/: texture_loader.cpp  texture_loader.h
examples/gfx/vulkan/: CMakeLists.txt
examples/gfx/vulkan/2_vulkan_texture/: main.cpp
examples/gfx/vulkan/3_vulkan_3d_cube/: main.cpp
examples/renderer/: CMakeLists.txt
examples/renderer/agnostic/: CMakeLists.txt
examples/renderer/agnostic/0_agnostic_window/: CMakeLists.txt
examples/renderer/agnostic/1_agnostic_hello_triangle/: CMakeLists.txt
examples/renderer/agnostic/2_agnostic_texture/: CMakeLists.txt
src/bebone/: CMakeLists.txt
src/bebone/assets/: CMakeLists.txt  README.md
src/bebone/assets/image/: image_painter.cpp
src/bebone/core/: CMakeLists.txt  README.md
src/bebone/core/debug/: console_logger.cpp  console_logger.h  ilogger.h
src/bebone/core/input/: input_executor.h
src/bebone/core/timestamp/: timestamp.h
src/bebone/core/types/: types.h
src/bebone/core/types/color/: color.tpp  color_r8g8b8.tpp  color_r8g8b8a8.tpp  color_rgba32f.tpp
src/bebone/core/types/matrix/: matrix_4x4.cpp  matrix_4x4.h
src/bebone/core/types/utils/: interpolation.tpp  rodrigues_rotation.h
src/bebone/core/types/vector/: vector2_type.tpp  vector3_type.tpp  vector4_type.tpp
src/bebone/gfx/: CMakeLists.txt  README.md  color_extensions.h  gfx.h  gfx_backend.h
src/bebone/gfx/opengl/: opengl_api.h  opengl_context.h  opengl_element_buffer_object.cpp  opengl_element_buffer_object.h  opengl_extension_checker.h  opengl_framebuffer.h  opengl_gpu_properties.h  opengl_renderbuffer.h  opengl_shader.h  opengl_shader_factory.h  opengl_shader_program.h  opengl_shader_properties.h  opengl_texture.h  opengl_texture_1d.h  opengl_texture_2d.cpp  opengl_texture_2d.h  opengl_texture_3d.h  opengl_texture_cube_map.cpp  opengl_texture_cube_map.h  opengl_uniform_buffer_object.cpp  opengl_uniform_buffer_object.h  opengl_vertex_array_object.cpp  opengl_vertex_array_object.h  opengl_vertex_buffer_object.cpp  opengl_vertex_buffer_object.h
src/bebone/gfx/opengl/interface/: i_opengl_element_buffer_object.h  i_opengl_uniform_buffer_object.h  i_opengl_vertex_array_object.h  i_opengl_vertex_buffer_object.h
src/bebone/gfx/vulkan/: vulkan_api.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_memory.cpp  vulkan_buffer_memory.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_buffer_pool.cpp  vulkan_command_buffer_pool.h  vulkan_debug_messenger.cpp  vulkan_debug_messenger.h  vulkan_depth_image.cpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.h  vulkan_device.cpp  vulkan_device.h  vulkan_device_chooser.cpp  vulkan_device_chooser.h  vulkan_device_memory.cpp  vulkan_device_memory.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_image_memory.cpp  vulkan_image_view.cpp  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline_layout.h  vulkan_pipeline_manager.cpp  vulkan_pipeline_manager.h  vulkan_render_pass.h  vulkan_render_target.h  vulkan_sampler.cpp  vulkan_sampler.h  vulkan_shader_module.cpp  vulkan_swap_chain.cpp  (+5 more)
src/bebone/gfx/vulkan/interface/: i_vulkan_command_buffer.h  i_vulkan_command_buffer_pool.h  i_vulkan_device_memory.h  i_vulkan_image_view.h  i_vulkan_instance.h  i_vulkan_sampler.h
src/bebone/gfx/window/: opengl_window.h  vulkan_window.h  window.cpp  window.h
src/bebone/gfx/window/events/: input_event.h
src/bebone/renderer/: CMakeLists.txt  README.md  renderer.h  renderer_backend.h
src/bebone/renderer/agnostic/: README.md  agnostic.h
src/bebone/renderer/agnostic/interface/: i_device.h
src/bebone/sound/: CMakeLists.txt  README.md
