file(GLOB_RECURSE BEBONE_EXAMPLE_RENDERER_AGNOSTIC_1_HELLO_TRIANGLE *.cpp)

include_directories(".")
include_directories(${BEBONE_INCLUDES})

add_executable(Bebone_Example_Renderer_Agnostic_1_Agnostic_Hello_Triangle ${BEBONE_EXAMPLE_RENDERER_AGNOSTIC_1_HELLO_TRIANGLE})
target_link_libraries(Bebone_Example_Renderer_Agnostic_1_Agnostic_Hello_Triangle bebone)